--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -262,6 +262,7 @@
   flex-direction: column;
   position: relative;
   overflow: hidden;
+  height: 100%;
 }
 
 .caseCard:hover {
